2012-12-26  Per Bothner  <per@bothner.com>

	* LispReader.java (readValuesAndAppend): New method.
	* ReaderVector.java (readVector): Use readValuesAndAppend.

2012-12-19  Charles Turner  <chturne@gmail.com>

	* LispLanguage.java (unitNamespace): Moved here from Scheme class.

2012-11-11  Per Bothner  <per@bothner.com>

	* LangObjType.java (compare): Add test for nullType.

2012-10-21  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java: Change reading of XML literals so it returns
	"call" of a symbol like $xml-element$, and not a literal Procedure.
	This enables better quotation behavior and read/write round-tripping.
	Also some other improvememts like using a symbol in place of a string.
	Also, pass String to MakeElement instead of wrapping in MakeText.
	* ResolveNamespace.java: Update to match ReaderXmlElement changes.
	* MakeXmlElement.java: Update to call MakeElement#setStringIsText.

2012-10-21  Per Bothner  <per@bothner.com>

	* ReadTable.java (makeSymbol): Simplify.

2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* LispLanguage.java (getTypeMap, getPackageStyleType,
	getNamedType, getTypeFor(Class)): New methods.

2012-10-02  Per Bothner  <per@bothner.com>

	Fix line number support for top-level non-pairs.
	* LispReader.java (readObjectWithSharing): Rename to ...
	(readObject(int,boolean)):  Take extra topLevel parameter.  If true
	and read object is not a list, wrap it in a begin form.
	(readCommand): Update with extra parameter to readObject.
	* ReaderDispatchMisc.java: Likewise.

2012-09-18  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): If seeing an unexpected ')', skip it.

2012-08-18  Per Bothner  <per@bothner.com>

	* BracketApply.java (rewrite): New convenience method errorWithPosition.

2012-02-05  Per Bothner  <per@bothner.com>

	Support #, and #,@ inside quasisyntax.  Complicated becaue of backward