@@ -1,3 +1,8 @@
+2012-12-27  Per Bothner  <per@bothner.com>
+
+	* DefineNamespace.java (scanForDefinitions): Also use prefix when
+	creating Namespace object.
+
 2012-12-26  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (readValuesAndAppend): New method.
